refactor: separate owner creation endpoint
