# src/main/java/com/pragma/powerup/application/handler/IUserHandler.java
@@ -1,10 +1,10 @@
 package com.pragma.powerup.application.handler;
 
-import com.pragma.powerup.application.dto.request.UserRequestDto;
+import com.pragma.powerup.application.dto.request.OwnerRequestDto;
 import com.pragma.powerup.application.dto.response.UserResponseDto;
 import com.pragma.powerup.application.dto.response.UserRoleResponseDto;
 
 public interface IUserHandler {
-    UserResponseDto createUser(UserRequestDto request);
+    UserResponseDto createOwner(OwnerRequestDto request);
     UserRoleResponseDto getUserRole(Long userId);
 }
