# src/main/java/com/pragma/powerup/domain/api/IUserServicePort.java
@@ -3,6 +3,6 @@ package com.pragma.powerup.domain.api;
 import com.pragma.powerup.domain.model.User;
 
 public interface IUserServicePort {
-    User createUser(User user);
+    User createOwner(User user);
     User getUserById(Long userId);
 }
